--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,12 +1,13 @@
-[programs.localnet]
-anchor_escrow = "6m7hFFRbDoCAN5bTm592crzaXNV3qkYwt6aaEzd1rkg6"
+
+[programs.devnet]
+anchor_escrow = "3q6Sc7N5Z4UQQWa1TEgncVvabF9dBc4ubCJjBxRC4Cqm"
 
 [registry]
-url = "https://anchor.projectserum.com"
+url = "https://api.devnet.solana.com"
 
 [provider]
-cluster = "https://rpc-mainnet-fork.dappio.xyz"
-wallet = "~/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/Users/rashidali/.config/solana/devnet.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
